# sciComp

./: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/Xcode/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
cpp/Xcode/CMakeScripts/: ReRunCMake.make
cpp/Xcode/Debug/: libsciComp.dylib
cpp/Xcode/scicomp.build/Debug/ALL_BUILD.build/: Script-E56624D794D75988FB66B0D6.sh
cpp/Xcode/scicomp.build/Debug/ZERO_CHECK.build/: Script-CEFDD2419DB89B966C8371BE.sh
cpp/Xcode/scicomp.build/Debug/install.build/: Script-93426DA6A4AC2C2AC9CE883C.sh
cpp/Xcode/scicomp.build/Debug/sciComp.build/: Script-81B958E0EE8A26596BC47B3A.sh
cpp/Xcode/scicomp.build/Debug/sciComp.build/Objects-normal/x86_64/: intro.d  quaternion.d  sciComp.LinkFileList
cpp/Xcode/scicomp.xcodeproj/: project.pbxproj
cpp/Xcode/scicomp.xcodeproj/project.xcworkspace/xcuserdata/bernardocohen.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/Xcode/scicomp.xcodeproj/xcuserdata/bernardocohen.xcuserdatad/xcschemes/: xcschememanagement.plist
cpp/include/: sciComp
cpp/include/sciComp_bits/: assembly_energy.hpp  assembly_mass.hpp  cg.hpp  chi_beta.hpp  coeff.hpp  dirichlet.hpp  element.hpp  energy.hpp  eye.hpp  f_alpha.hpp  fft.hpp  fft_sin.hpp  fish2d_fft.hpp  index.hpp  inplace_factorize.hpp  inplace_solve.hpp  interpolate.hpp  interpolate_1d.hpp  interpolate_2d.hpp  intro.hpp  mass.hpp  matrix.hpp  meas.hpp  mesh.hpp  pass1.hpp  pass2.hpp  point.hpp  quaternion.hpp  range.hpp  renumbering.hpp  row_col.hpp  sinusprod.hpp  tridiag.hpp  tridiag_ldlt.hpp  u_alpha.hpp  unique_insert.hpp  valarray_util.hpp
cpp/src/: intro.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/Xcode/: CMakeCache.txt  cmake_install.cmake
cpp/tests/Xcode/CMakeScripts/: ReRunCMake.make
cpp/tests/Xcode/test.build/Debug/ALL_BUILD.build/: Script-46E4F598FABCB51D70D64F6A.sh
cpp/tests/Xcode/test.build/Debug/ZERO_CHECK.build/: Script-FE20FD5EEE26DDC9B766DCB8.sh
cpp/tests/Xcode/test.build/Debug/test.build/Objects-normal/x86_64/: test.LinkFileList  test.d
cpp/tests/Xcode/test.xcodeproj/: project.pbxproj
cpp/tests/Xcode/test.xcodeproj/project.xcworkspace/xcuserdata/bernardocohen.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/tests/Xcode/test.xcodeproj/xcuserdata/bernardocohen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cpp/tests/Xcode/test.xcodeproj/xcuserdata/bernardocohen.xcuserdatad/xcschemes/: xcschememanagement.plist
cpp/tests/src/: test.cpp
python/: sc.cpp  sciComp.cpp  sciComp_Testing.ipynb
python/.ipynb_checkpoints/: numRec Testing-checkpoint.ipynb
